# muku

./: .gitignore  README.md  package-lock.json  package.json
docs/: muku-dev-doc.md  qa-checklist.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_due_at.sql
src-tauri/src/: job_guard.rs  lib.rs  llm_init.rs  main.rs  notifier.rs
src-tauri/src/commands/: chat.rs  mod.rs  tasks.rs
src-tauri/src/db/: mod.rs
src-tauri/src/llm/: client.rs  mod.rs  prompt.rs
src/components/: ChatView.tsx  MessageBubble.tsx  SettingsView.tsx  SplashScreen.tsx  TaskCard.tsx  TaskListView.tsx
src/hooks/: useChat.ts  useLlmStatus.ts  useTasks.ts
src/lib/: db.ts  events.ts  invoke.ts  settings.ts
src/styles/: global.css
src/types/: index.ts
