[package]
name = "muku"
version = "0.1.0"
description = "Muku - AI Task Manager"
authors = ["Takumi"]
edition = "2021"

[lib]
name = "muku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls", "charset", "http2", "stream"] }
uuid = { version = "1.23.0", features = ["v4"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.2"
chrono = "0.4.44"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security"] }
tauri-winrt-notification = "0.7.2"
